<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <include
            layout="@layout/title_bar"
    />
    <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
        >
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_10"
                    style="@style/between_line"/>
            <com.bilibili.lingxiao.widget.LinearCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:left_text="@string/account_info"
                    android:clickable="true"
            />
            <com.bilibili.lingxiao.widget.LinearCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:left_text="@string/security_private"
                    android:clickable="true"
            />
            <com.bilibili.lingxiao.widget.LinearCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:left_text="@string/take_goods_info"
            />
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_10"
                    style="@style/between_line"/>
            <com.bilibili.lingxiao.widget.LinearCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:left_text="@string/play_setting"
            />
            <com.bilibili.lingxiao.widget.LinearCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:left_text="@string/decode_setting"
            />
            <com.bilibili.lingxiao.widget.LinearCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:left_text="@string/danmaku_setting"
            />
            <com.bilibili.lingxiao.widget.LinearCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:left_text="@string/offline_setting"
            />
            <com.bilibili.lingxiao.widget.LinearCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:left_text="@string/bangumi_setting"
            />
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_10"
                    style="@style/between_line"/>
            <com.bilibili.lingxiao.widget.LinearCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:left_text="@string/dynamic_setting"
            />
            <com.bilibili.lingxiao.widget.LinearCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:left_text="@string/push_message"
            />
            <com.bilibili.lingxiao.widget.LinearCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:left_text="@string/clean_sdcard"
            />
            <com.bilibili.lingxiao.widget.LinearCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:left_text="@string/other_setting"
            />

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_10"
                    style="@style/between_line"/>

            <com.bilibili.lingxiao.widget.LinearCardView
                    android:id="@+id/my_service"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:left_text="@string/my_service"
            />
            <com.bilibili.lingxiao.widget.LinearCardView
                    android:id="@+id/help"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:left_text="@string/help"
            />
            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dp_10"
                    style="@style/between_line"/>
            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/exit_account"
                    android:background="@drawable/ripple_background"
            />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>

</LinearLayout>

