<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".user.LoginActivity">
    <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:id="@+id/login_toolbar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:title="@string/login_title"
    >
        <TextView
                android:id="@+id/login_forget"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/forget_password"
                android:textColor="@color/white"
                android:gravity="right"
                android:layout_marginLeft="200dp"
                android:layout_marginRight="10dp"
        />
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
    >
        <ImageView
                android:id="@+id/login_img_22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_22"
                android:layout_marginTop="40dp"
        />
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_bili_logo"
                android:layout_centerInParent="true"
        />
        <ImageView
                android:id="@+id/login_img_33"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_33"
                android:layout_marginTop="40dp"
                android:layout_alignParentRight="true"
        />
    </RelativeLayout>










    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
    >
        <android.support.v7.widget.AppCompatImageView
                android:id="@+id/login_iv_username"
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:srcCompat="@drawable/ic_img_header"
                android:layout_margin="5dp"
                android:padding="6dp"
                android:tint="@color/colorPrimary"
        />
        <EditText
                android:id="@+id/login_et_username"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_height="wrap_content"
                android:hint="@string/input_username"
                android:background="@null"
                android:padding="6dp"
        />

        <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
        >
            <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/login_img_username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_img_right"
                    android:visibility="invisible"
                    tools:visibility="visible"/>
            <ProgressBar
                    android:id="@+id/login_progress_name"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:visibility="invisible"
                    tools:visibility="visible"
                    android:backgroundTint="@color/colorPrimary"
            />
        </FrameLayout>
    </LinearLayout>

    <ImageView
            android:id="@+id/login_line_between_username"
            android:layout_width="match_parent"
            android:layout_height="1.8dp"
            android:background="@color/colorPrimary"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"/>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
    >
        <android.support.v7.widget.AppCompatImageView
                android:id="@+id/login_iv_password"
                android:layout_width="35dp"
                android:layout_height="35dp"
                app:srcCompat="@drawable/ic_img_password"
                android:layout_margin="5dp"
                android:padding="5dp"
                android:tint="@color/colorPrimary"
        />

        <EditText
                android:id="@+id/login_et_password"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/input_password"
                android:background="@null"
                android:padding="6dp"
        />

        <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="6dp"
        >
            <android.support.v7.widget.AppCompatImageView
                    android:id="@+id/login_img_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_img_right"
                    android:visibility="invisible"
                    tools:visibility="visible"
            />
            <ProgressBar
                    android:id="@+id/login_progress_password"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:visibility="invisible"
                    tools:visibility="visible"
                    android:backgroundTint="@color/colorPrimary"
            />
        </FrameLayout>

    </LinearLayout>
    <ImageView
            android:id="@+id/login_line_between_password"
            android:layout_width="match_parent"
            android:layout_height="1.8dp"
            android:background="@color/black_alpha_16"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"/>






    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal"
    android:layout_marginTop="20dp">
        <Button
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:text="@string/register_text"
                android:textColor="@color/pink_400"
                android:layout_marginRight="20dp"
                android:background="@drawable/register_button_background"
        />
        <Button
                android:id="@+id/login"
                android:layout_width="120dp"
                android:layout_height="40dp"
                android:text="@string/login_title"
                android:textColor="@color/white"
                android:layout_marginLeft="20dp"
                android:background="@drawable/login_button_background"
        />
    </LinearLayout>
</LinearLayout>